# DAO-lpstaking

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.sh  test.sh
metapool/: Cargo.toml
metapool/src/: account.rs  distribute.rs  empty_nep_145.rs  fungible_token_standard.rs  internal.rs  lib.rs  migrations.rs  owner.rs  reward_meter.rs  staking_pools.rs  types.rs  utils.rs
metapool/tests/: tests.md
metapool/tests/sim/: sim_contract_state.rs  sim_setup.rs  sim_steps.rs  sim_utils.rs  simulation_fuzzy.rs  simulation_simple.rs
scripts/: call-testnet.sh  deploy-testnet.sh  propose-upgrade.sh
test-core-staking-pool/: Cargo.toml  README.md
test-core-staking-pool/src/: internal.rs  lib.rs
