[package]
edition = "2018"
name = "metapool"
version = "1.2.1"
authors = ["Metapool.app <hello@metapool.app>"]

[lib]
crate-type = ["cdylib"]

[dependencies]

near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="3.1.0" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs.git", tag="3.1.0" }

uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }

rand = "*"
rand_pcg = "*"

near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", tag="3.1.0"  }
